environments/stage/stage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stage-service
  namespace: stage
spec:
  selector:
    app: stage-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
  type: NodePort
