environments/stage/stage-ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sstage-ingress
  namespace: stage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: my-production-app  
spec:
  ingressClassName: nginx  
  rules:
  - host: stage.anupamdemos.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stage-service
            port:
              number: 80
